fix horizontal scroll

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1581,14 +1581,6 @@ header {
   min-width: 105%;
 }
 
-.ticker-wrap.ticker-rotate   { 
-  width: 100.50%;
-}
-
-
-.ticker-wrap.ticker-rotate {
-  left: -0.25%;
-}
 
 .ticker-wrap.ticker-move.ticker-rotate { 
   margin-top: 20px;
